--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "annyang": "^2.6.1",
     "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.5.6",
     "frontend": "file:",
     "react": "^18.2.0",
